<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:paddingTop="10dp"
    android:paddingLeft="20dp"
    android:paddingRight="20dp"
    android:paddingBottom="16dp">

    <!-- Profile Icon -->
    <ImageView
        android:id="@+id/ivProfile"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/profile_icon"
        android:src="@drawable/ic_person"
        app:tint="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <!-- Search Icon -->
    <ImageView
        android:id="@+id/ivSearch"
        android:layout_width="36dp"
        android:layout_height="36dp"
        android:layout_marginTop="16dp"
        android:contentDescription="@string/search_icon"
        android:src="@drawable/ic_search"
        app:tint="@color/purple_500"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <!-- Welcome Text -->
    <TextView
        android:id="@+id/tvWelcome"
        style="@style/TextAppearance.RentifyApp.Headline8"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginStart="10dp"
        android:text="@string/hi_user"
        app:layout_constraintTop_toBottomOf="@+id/ivProfile"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start" />

    <!-- Clever Catchphrase -->
    <TextView
        android:id="@+id/tvCatchphrase"
        style="@style/TextAppearance.RentifyApp.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginStart="10dp"
        android:text="@string/lessor_message"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcome"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start" />

    <!-- Main Card with User Role -->
    <com.google.android.material.card.MaterialCardView
        android:id="@+id/mainCard"
        android:layout_width="0dp"
        android:layout_height="180dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        app:cardCornerRadius="16dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        app:layout_constraintTop_toBottomOf="@+id/tvCatchphrase"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <!-- Card Content (Icon or Image) -->
            <ImageView
                android:id="@+id/cardIcon"
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:layout_centerInParent="true"
                android:contentDescription="@string/card_icon"
                android:src="@drawable/ic_home" />

            <!-- User Role -->
            <TextView
                android:id="@+id/tvUserRole"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/lessor"
                android:textStyle="bold"
                android:textSize="16sp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentStart="true"
                android:padding="8dp"
                android:textColor="@color/on_primary"/>
        </RelativeLayout>
    </com.google.android.material.card.MaterialCardView>

    <!-- Bottom Navigation (Icons) -->
    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottom_navigation"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginBottom="16dp">

        <ImageView
            android:id="@+id/nav_home"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:src="@drawable/ic_home"
            android:contentDescription="@string/home"
            android:layout_marginStart="16dp"
            app:tint="@color/purple_500"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginEnd="10dp" />

        <ImageView
            android:id="@+id/nav_notifications"
            android:layout_width="38dp"
            android:layout_height="38dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/notifications"
            android:src="@drawable/ic_notifications"
            app:tint="@color/purple_500"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/nav_settings"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@id/nav_home" />

        <ImageView
            android:id="@+id/nav_settings"
            android:layout_width="37dp"
            android:layout_height="37dp"
            android:src="@drawable/ic_settings"
            android:contentDescription="@string/settings"
            android:layout_marginEnd="16dp"
            app:tint="@color/purple_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>


